// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listFunctions > V2 API > listFunctions includes routes when parseISC is true 1`] = `
{
  "displayName": undefined,
  "excludedRoutes": [
    {
      "expression": "^\\/products\\/sale(.*)\\/?$",
      "pattern": "/products/sale*",
    },
  ],
  "extension": ".mjs",
  "generator": undefined,
  "inputModuleFormat": "esm",
  "mainFile": "with-excluded-expression.mjs",
  "name": "with-excluded-expression",
  "routes": [
    {
      "expression": "^\\/products(?:\\/([^\\/]+?))\\/?$",
      "methods": [],
      "pattern": "/products/:id",
      "prefer_static": undefined,
    },
  ],
  "runtime": "js",
  "runtimeAPIVersion": 2,
  "schedule": undefined,
  "srcDir": "",
  "srcFile": undefined,
  "timeout": undefined,
}
`;

exports[`listFunctions > V2 API > listFunctions includes runtimeAPIVersion when parseISC is true 1`] = `
{
  "displayName": undefined,
  "excludedRoutes": [],
  "extension": ".ts",
  "generator": undefined,
  "inputModuleFormat": "esm",
  "mainFile": "function.ts",
  "name": "function",
  "routes": [],
  "runtime": "js",
  "runtimeAPIVersion": 2,
  "schedule": undefined,
  "srcDir": "",
  "srcFile": undefined,
  "timeout": undefined,
}
`;

exports[`listFunctions > v1 > Can list function main files from multiple source directories with listFunctions() 1`] = `
[
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": ".netlify/internal-functions/function.js",
    "name": "function",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": ".netlify/internal-functions",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": ".netlify/internal-functions/function_internal.js",
    "name": "function_internal",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": ".netlify/internal-functions",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "netlify/functions/function.js",
    "name": "function",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "netlify/functions",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "netlify/functions/function_user.js",
    "name": "function_user",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "netlify/functions",
    "srcFile": undefined,
    "timeout": undefined,
  },
]
`;

exports[`listFunctions > v1 > Can list function main files with listFunctions() 1`] = `
[
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".zip",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test.zip",
    "name": "test",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test.js",
    "name": "test",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "five/index.ts",
    "name": "five",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "five",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "four.js/four.js.js",
    "name": "four",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "four.js",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "one/index.js",
    "name": "one",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "one",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "two/two.js",
    "name": "two",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "two",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": "",
    "generator": undefined,
    "inputModuleFormat": undefined,
    "mainFile": "test",
    "name": "test",
    "routes": undefined,
    "runtime": "go",
    "runtimeAPIVersion": undefined,
    "schedule": undefined,
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
]
`;

exports[`listFunctions > v1 > listFunctions includes in-source config declarations 1`] = `
[
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs.js",
    "name": "cron_cjs",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs_exports.js",
    "name": "cron_cjs_exports",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "cjs",
    "mainFile": "cron_cjs_renamed.js",
    "name": "cron_cjs_renamed",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm.js",
    "name": "cron_esm",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_additional_schedule_import.js",
    "name": "cron_esm_additional_schedule_import",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export.js",
    "name": "cron_esm_no_direct_export",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export_renamed.js",
    "name": "cron_esm_no_direct_export_renamed",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_no_direct_export_renamed_reassigned.js",
    "name": "cron_esm_no_direct_export_renamed_reassigned",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_renamed.js",
    "name": "cron_esm_renamed",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_schedule_multi_import.js",
    "name": "cron_esm_schedule_multi_import",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".js",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_esm_schedule_reassigned.js",
    "name": "cron_esm_schedule_reassigned",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_ts.ts",
    "name": "cron_ts",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
  {
    "displayName": undefined,
    "excludedRoutes": undefined,
    "extension": ".ts",
    "generator": undefined,
    "inputModuleFormat": "esm",
    "mainFile": "cron_ts_renamed.ts",
    "name": "cron_ts_renamed",
    "routes": undefined,
    "runtime": "js",
    "runtimeAPIVersion": 1,
    "schedule": "@daily",
    "srcDir": "",
    "srcFile": undefined,
    "timeout": undefined,
  },
]
`;
